Address review feedback on #1041
Critical:
- Command: add @Tag("CustomPrompt") so legacy XML <CustomPrompt .../>
  item tags map to the renamed class on upgrade. Without this, pre-#1040
  user commands would be silently dropped because IntelliJ XmlSerializer
  matches list items by the class's simple name.
- DevoxxGenieStateService: migrate from the legacy customPrompts always
  when it is non-empty (its presence is the unambiguous upgrade signal),
  not just when commands is empty (commands is pre-populated with defaults
  by the constructor, which previously masked the migration).
- Migration test rewritten: now performs a real XmlSerializer round-trip
  with hand-crafted legacy XML, asserts <CustomPrompt> items deserialize
  into Command, asserts loadState migrates into commands, and asserts a
  subsequent serialize-with-SkipDefaultValuesSerializationFilters drops
  the legacy customPrompts element. Adds afterMigrationXml... test for
  the no-leftover-XML invariant.
- SkillRegistry: no disk I/O in the constructor. New reloadAsync(Runnable)
  off-loads the scan to a pooled thread and dispatches the optional
  callback on the EDT. New reloadBlocking() for background callers (agent
  path). ensureLoaded() lazily triggers the first scan. peekAllSkills()
  returns the current cache without scanning.
- SkillsSettingsComponent: the constructor now seeds the working
  disabled-names set synchronously and triggers reloadAsync(this::refreshTable)
  for the disk scan. Reload button disables itself, fires reloadAsync, and
  re-enables + refreshes from the EDT callback. Apply() invalidates
  derived caches so the next agent prompt sees the new filter.

Minor:
- SkillRegistry caches the built Skills instance and the system-prompt
  fragment across calls; AgentToolProviderFactory and ChatMemoryManager
  now share that cached instance. invalidateDerivedCaches() rebuilds only
  Skills/fragment without re-scanning disk.
- SkillRegistry.ACTIVATE_SKILL_TOOL_NAME constant introduced 